updated Czech and Russian translation

--- a/po/wesnoth-dm/ru.po
+++ b/po/wesnoth-dm/ru.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2011-11-16 12:43+0100\n"
-"PO-Revision-Date: 2011-10-12 17:11+0200\n"
+"POT-Creation-Date: 2011-11-23 15:01+0100\n"
+"PO-Revision-Date: 2011-12-01 14:35+0200\n"
 "Last-Translator: Victor Sergienko <singalen@gmail.com>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -426,25 +426,15 @@ msgstr "Нет! Метор... Не умирай!"
 
 #. [message]: speaker=unit
 #: data/campaigns/Delfadors_Memoirs/scenarios/02_This_Valley_Belongs_to_Me.cfg:130
-#, fuzzy
-#| msgid ""
-#| "Heed my last words, Delfador! Journey northeast to Weldyn, and seek out "
-#| "my friend Leollyn. He will help you."
 msgid ""
 "Heed my last words, Delfador! Journey northwest to Weldyn, and seek out my "
 "friend Leollyn. He will help you."
 msgstr ""
-"Запомни мои последние словам, Делфадор! Отправляйся на северо-восток, в "
+"Запомни мои последние словам, Делфадор! Отправляйся на северо-запад, в "
 "Велдин, и разыщи моего друга Леоллина. Он поможет тебе."
 
 #. [message]: speaker=Methor
 #: data/campaigns/Delfadors_Memoirs/scenarios/02_This_Valley_Belongs_to_Me.cfg:143
-#, fuzzy
-#| msgid ""
-#| "Well done, Delfador! I see I have trained you well, and you are truly "
-#| "ready to seek your fortune. My traveling days are done, but it is time "
-#| "for you to journey northeast to Weldyn, and seek out my friend Leollyn. "
-#| "He will help you."
 msgid ""
 "Well done, Delfador! I see I have trained you well, and you are truly ready "
 "to seek your fortune. My traveling days are done, but it is time for you to "
@@ -452,8 +442,8 @@ msgid ""
 "you."
 msgstr ""
 "Отличная работа, Делфадор! Я вижу, что хорошо тебя обучил, и ты готов идти "
-"искать свою удачу. Дни моих путешествий закончились, но для тебя теперь "
-"самое время отправиться на северо-восток, в Велдин, и разыскать моего друга "
+"искать свою судьбу. Дни моих путешествий прошли, но для тебя теперь самое "
+"время отправиться на северо-запад, в Велдин, и разыскать моего друга "
 "Леоллина. Он поможет тебе."
 
 #. [message]: id=Delfador
