Updated the Old English translation.

--- a/po/wesnoth/ang@latin.po
+++ b/po/wesnoth/ang@latin.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: ang@latin\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-11-23 15:01+0100\n"
-"PO-Revision-Date: 2011-11-30 10:31-0500\n"
+"PO-Revision-Date: 2011-12-01 10:31-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: Old English <http://wiki.wesnoth.org/OldEnglishTranslation>\n"
 "Language: ang@latin\n"
@@ -430,12 +430,12 @@ msgstr "Niƿe Englisc"
 #. [about]
 #: data/core/about.cfg:1234
 msgid "Afrikaans Translation"
-msgstr "Affricanisc Þeodnes"
+msgstr "Affricanisc Geþeodnes"
 
 #. [about]
 #: data/core/about.cfg:1254
 msgid "Arabic Translation"
-msgstr "Arabisc Þeodnes"
+msgstr "Arabisc Geþeodnes"
 
 #. [about]
 #: data/core/about.cfg:1261
@@ -475,24 +475,24 @@ msgstr ""
 #. [about]
 #: data/core/about.cfg:1473
 msgid "Danish Translation"
-msgstr "Denisc Þeodnes"
+msgstr "Denisc Geþeodnes"
 
 #. [about]
 #: data/core/about.cfg:1504
 msgid "Dutch Translation"
-msgstr "Niðerlendisc Þeodnes"
+msgstr "Niðerlendisc Geþeodnes"
 
 #. [about]
 #: data/core/about.cfg:1565
 #, fuzzy
 msgid "English (GB) Translation"
-msgstr "Niƿe Englisc (GB) Þeodnes"
+msgstr "Niƿe Englisc (GB) Geþeodnes"
 
 #. [about]
 #: data/core/about.cfg:1587
 #, fuzzy
 msgid "English (Shaw) Translation"
-msgstr "Niƿe Englisc (Shaw) Þeodnes"
+msgstr "Niƿe Englisc (Shaw) Geþeodnes"
 
 #. [about]
 #: data/core/about.cfg:1611
@@ -512,7 +512,7 @@ msgstr ""
 #. [about]
 #: data/core/about.cfg:1650
 msgid "Finnish Translation"
-msgstr "Finnisc Þeodnes"
+msgstr "Finnisc Geþeodnes"
 
 #. [about]
 #: data/core/about.cfg:1696
@@ -537,7 +537,7 @@ msgstr ""
 #. [about]
 #: data/core/about.cfg:1962
 msgid "Greek Translation"
-msgstr "Creacisc Þeodnes"
+msgstr "Creacisc Geþeodnes"
 
 #. [about]
 #: data/core/about.cfg:1999
@@ -552,7 +552,7 @@ msgstr ""
 #. [about]
 #: data/core/about.cfg:2073
 msgid "Icelandic Translation"
-msgstr "Islendisc Þeodnes"
+msgstr "Islendisc Geþeodnes"
 
 #. [about]
 #: data/core/about.cfg:2083
@@ -562,17 +562,17 @@ msgstr ""
 #. [about]
 #: data/core/about.cfg:2106
 msgid "Irish Translation"
-msgstr "Irisc Þeodnes"
+msgstr "Irisc Geþeodnes"
 
 #. [about]
 #: data/core/about.cfg:2113
 msgid "Italian Translation"
-msgstr "Italisc Þeodnes"
+msgstr "Italisc Geþeodnes"
 
 #. [about]
 #: data/core/about.cfg:2154
 msgid "Japanese Translation"
-msgstr "Iapanisc Þeodnes"
+msgstr "Iapanisc Geþeodnes"
 
 #. [about]
 #: data/core/about.cfg:2222
@@ -582,17 +582,17 @@ msgstr ""
 #. [about]
 #: data/core/about.cfg:2230
 msgid "Latin Translation"
-msgstr "Lædenu Þeodnes"
+msgstr "Lædenu Geþeodnes"
 
 #. [about]
 #: data/core/about.cfg:2257
 msgid "Latvian Translation"
-msgstr "Lettisc Þeodnes"
+msgstr "Lettisc Geþeodnes"
 
 #. [about]
 #: data/core/about.cfg:2268
 msgid "Lithuanian Translation"
-msgstr "Liþþuanisc Þeodnes"
+msgstr "Liþþuanisc Geþeodnes"
 
 #. [about]
 #: data/core/about.cfg:2290
@@ -607,18 +607,18 @@ msgstr ""
 #. [about]
 #: data/core/about.cfg:2306
 msgid "Norwegian Translation"
-msgstr "Norðisc Þeodnes"
+msgstr "Norðisc Geþeodnes"
 
 #. [about]
 #: data/core/about.cfg:2331
 #, fuzzy
 msgid "Old English Translation"
-msgstr "Englisc Þeodnes"
+msgstr "Englisc Geþeodnes"
 
 #. [about]
 #: data/core/about.cfg:2340
 msgid "Polish Translation"
-msgstr "Polisc Þeodnes"
+msgstr "Polisc Geþeodnes"
 
 #. [about]
 #: data/core/about.cfg:2380
@@ -633,12 +633,12 @@ msgstr ""
 #. [about]
 #: data/core/about.cfg:2429
 msgid "Romanian Translation"
-msgstr "Rumænisc Þeodnes"
+msgstr "Rumænisc Geþeodnes"
 
 #. [about]
 #: data/core/about.cfg:2437
 msgid "Russian Translation"
-msgstr ""
+msgstr "Russic Geþeodnes"
 
 #. [about]
 #: data/core/about.cfg:2519
@@ -658,18 +658,18 @@ msgstr ""
 #. [about]
 #: data/core/about.cfg:2580
 msgid "Spanish Translation"
-msgstr "Speonisc Þeodnes"
+msgstr "Speonisc Geþeodnes"
 
 #. [about]
 #: data/core/about.cfg:2650
 msgid "Swedish Translation"
-msgstr "Sƿeonisc Þeodnes"
+msgstr "Sƿeonisc Geþeodnes"
 
 #. [about]
 #: data/core/about.cfg:2691
 #, fuzzy
 msgid "Turkish Translation"
-msgstr "Turkiscu Þeodnes"
+msgstr "Turkiscu Geþeodnes"
 
 #. [about]
 #: data/core/about.cfg:2713
@@ -1809,6 +1809,7 @@ msgstr ""
 
 #. [language]
 #: data/english.cfg:27
+#, fuzzy
 msgid "$name Lake"
 msgstr "$name|es Lagu"
 
@@ -1825,7 +1826,7 @@ msgstr ""
 #. [language]
 #: data/english.cfg:30
 msgid "$name|bury,$name|ham,$name|ton,$name|bury"
-msgstr ""
+msgstr "$name|burh,$name|ham,$name|tun,$name|burh"
 
 #. [language]
 #: data/english.cfg:31
@@ -1852,12 +1853,15 @@ msgstr ""
 msgid "$name|ham,$name|ton,$name|field"
 msgstr "$name|ham,$name|tun,$name|feld"
 
+# TODO: do research on OE forest and woods names
 #. [language]
 #: data/english.cfg:35
 msgid ""
 "$name|ham,$name|ton,$name|wood,$name Forest,$forest|wood,$forest|ham,$forest|"
 "ton"
 msgstr ""
+"$name|ham,$name|tun,$name|ƿudu,$name Ƿeald,$forest|ƿudu,$forest|ham,$forest|"
+"tun"
 
 #. [language]
 #: data/english.cfg:36
