Updated the Latin translation.
Fixes bug #19115. Fixed a couple of typos in the changelogs.

--- a/po/wesnoth-dm/la.po
+++ b/po/wesnoth-dm/la.po
@@ -431,7 +431,6 @@ msgstr "Hau! Methor... Noli mori!"
 
 #. [message]: speaker=unit
 #: data/campaigns/Delfadors_Memoirs/scenarios/02_This_Valley_Belongs_to_Me.cfg:130
-#, fuzzy
 #| msgid ""
 #| "Heed my last words, Delfador! Journey northeast to Weldyn, and seek out "
 #| "my friend Leollyn. He will help you."
@@ -439,7 +438,7 @@ msgid ""
 "Heed my last words, Delfador! Journey northwest to Weldyn, and seek out my "
 "friend Leollyn. He will help you."
 msgstr ""
-"Cave verbis ultimis, Delfador! I inter septentriones et orientem ad Veldinem "
+"Cave verbis ultimis, Delfador! I inter septentrionem et occidentem ad Veldinem "
 "amicum Leollum petitum. Te iuvabit. "
 
 #. [message]: speaker=Methor
